<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.WelcomeFragment">
    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp56"
        android:layout_marginLeft="@dimen/dp28"
        android:textSize="@dimen/sp18"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/dp28"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btnLoginWithGoogle"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp56"
        android:layout_marginLeft="@dimen/dp28"
        android:layout_marginRight="@dimen/dp28"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/green"
        android:text="@string/login_with_google"
        android:textSize="@dimen/sp18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHaveAccount" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp46"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginRight="@dimen/dp46"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:textColor="@color/blue"
        android:textSize="@dimen/sp18"
        android:id="@+id/btnDonotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp28"
        android:layout_marginTop="@dimen/dp22"
        android:layout_marginRight="@dimen/dp28"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"/>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        android:layout_marginTop="40dp"
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp28"
        android:layout_marginLeft="@dimen/dp28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="58dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginRight="@dimen/dp28"
        android:id="@+id/til_password"
        android:layout_marginTop="@dimen/dp28"
        android:layout_marginLeft="@dimen/dp28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textSize="@dimen/sp24"
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>